<resources>
    <string name="app_name">SmartagSyntaxScore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="Left">left</string>
    <string name="Right">right</string>
    <string name="password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Olun!</string>
    <string name="signup">Kayıt Ol</string>
    <string name="question">Bir hesabınız yok mu?</string>
    <string name="name">Ad Soyad</string>
    <string name="leftdominance">Left Dominance</string>
    <string name="apname">Syntax Score</string>
    <string name="question1">1. Total occlusion (T.O)</string>
    <string name="question2">Zaten bir hesabınız var mı ?</string>
    <string name="question3">I. Indicate the first segment number of the T.O.</string>
    <string name="question4">II. is Age of T.O. > 3 months?</string>
    <string name="question5">III. Blunt stump?</string>
    <string name="question6">IV. Bridging?</string>
    <string name="question7">VI. Is there a sidebrench at the origin of the occlusion</string>
    <string name="question7.1">Yes, all side breanches &lt;1.5mm</string>,
    <string name="question7.2">Yes, all side breanches &gt;= 1.5mm</string>
    <string name="question7.3">Yes, all both breanches &lt;1.5mm and &gt;= 1.5 are involved</string>
    <string name="question8">2.Trifurcation</string>
    <string name="question9">unknown</string>
    <string name="question10">7. Heavy calcification</string>
    <string name="question11">8. Thrombus</string>
    <string name="question12">5. Severe Tortuosity</string>
    <string name="question13">3. Bifurcation</string>
    <string name="question14">6. Length&gt;20mm</string>
    <string name="question15">7. Heavy calcification</string>
    <string name="todo">TODO</string>
    <string name="comment">Type your comment here…</string>
    <string name="leftscreen">Lezyon için hangi segment(ler)in hastalıklı olduğunu belirtiniz</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="yes">Yes</string>
    <string name="Comment">Comment</string>
    <string name="rightdominance">Right Dominance</string>
</resources>