<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.Left.Screen2_9">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLR3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        app:title="@string/leftdominance"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        app:srcCompat="@drawable/leftscreen" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/question15"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/nextButton2_10"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/previous"
            android:text="@string/next"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="184dp"
            android:layout_marginBottom="252dp"
            app:layout_constraintBottom_toTopOf="@+id/nextButton2_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_marginStart="10dp"
                android:paddingStart="4dp"/>

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginStart="10dp"
                android:paddingStart="4dp"/>
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>