<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.Screen1_5">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLR3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        app:title="@string/leftdominance"
        app:titleTextColor="@color/white" />


    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:checked="true"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="16dp"
        android:text="@string/question1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"

        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/question7"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButton7_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/radioButton7_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/question7.1" />
            <RadioButton
                android:id="@+id/radioButton7_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/question7.2" />
            <RadioButton
                android:id="@+id/radioButton7_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/question7.3" />

        </RadioGroup>

        <Button
            android:id="@+id/nextButton1_5_2"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/previous"
            android:text="@string/next"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>