<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="448dp"
        android:layout_height="250dp"
        android:layout_marginBottom="48dp"
        android:background="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/loginemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logindoc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginemail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="58dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintStart_toStartOf="@+id/loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginemail"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="344dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="158dp"
        android:layout_height="21dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:text="@string/question"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <TextView
        android:id="@+id/registerLogin"
        android:layout_width="95dp"
        android:layout_height="21dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:text="@string/register"
        android:textColor="@color/primaryColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="@+id/loginPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        tools:ignore="TextContrastCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>