<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.Screen2_8">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLR3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        app:title="@string/leftdominance"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        app:srcCompat="@drawable/leftscreen" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:checked="true"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="16dp"
        android:text="@string/question1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"

        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/question11"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/nextButton2_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingStart="4dp"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingStart="4dp"
                android:text="No" />

            <LinearLayout
                android:layout_width="408dp"
                android:layout_height="279dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Comment"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="97dp"
                        android:layout_marginTop="5dp"
                        android:hint="@string/comment" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </RadioGroup>

        <Button
            android:id="@+id/nextButtonLesion"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/previous"
            android:text="Next"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>